FixtureSelectorDaoImpl.java logic changes + Added FixtureSelectorDaoImplTest.java, spring-config-test.xml and corresponding changes in pom.xml